# akshat-canonical

./: .dockerignore  .gitignore  Dockerfile  README.md  data.csv  pyproject.toml
src/: main.py
src/api/: main.py
src/tests/: test_api.py
